
09 oct 2013
   - fixed notification view for 3.5 and 4 inc devices
   - textfields working with keyboard
   - all hide/unhide appropriately (? does at/until make sense for 'every hours/days' ?)
   - still need slider response in at/until textfields, fix checkboxes

10 oct 2013
   - fixed checkboxes

   + need to hide sliders etc - need outlets to ref - for 'every'
   + need to link sliders to hrs/mins

15 oct 2013
   - start on slider -> hr, min textfields

17 oct 2013
   - mostly finished gui
   -- still need decisions on how 'every' works, hiding start/finish times
   - start data structure for notification

22 oct 2013
   - implemented display rules for everyBtn
   - think gui finished

07 nov 2013
   - starting to implement notifyReminder class
   - textboxes disappeared from configTOopts - not in 1.1.2 release, only tested in simulator

--- commit ---

12 nov 2013
   - fix textboxes disappeard from configTOopts - problem from refactoring rTrackerResource rrConfigTextField

13 nov 2013
   - implement dbInfo button, recoverItems if there are vo datapoints with item IDs not in voConfig
   - change to:laodFromDict to overwrite if name is recover%d and vID matches

17 nov 2013
   - tested db values recover; added loadConfig, else seems ot work.
   - start export value option

19 nov 2013
   - completed and tested 'CSV read/write values (not labels)' option for choices
   - implemented and tested 'integer steps' option for slider
   - renewed iOS developer certificate (60 quid Order Number: W465913770

20 nov 2013

--- commit ---

21 nov 2013
   - working on notifyReminder class

25 nov 2013
   - submit as 1.1.3 (notifyReminders disabled)

--- commit ---


++ 


+ add -[n] entries thing
+ add entry_count as a fn piece -- count of entries over range, so avg could be sum()/entry_count

+ make graph bars brighter / less opaque when selected ?
+ add track it all to with various functions to default trackers


