@@ -421,6 +421,8 @@
 				D4956B1F12E06EAA00B0BB9B /* valueObj classes */,
 				D43EE365133CBF4100737E76 /* csv support */,
 				D43C494412FA129000B95AB7 /* gfx.h */,
+				D4620055182C046E00F6F2C2 /* notifyReminder.h */,
+				D4620056182C046E00F6F2C2 /* notifyReminder.m */,
 				D427FD3F126C78D100A8ED9A /* rTracker-constants.h */,
 				D4E069A61343C4D7002B42C8 /* dbg-defs.h */,
 				D40DC28E133BEC2A00023D5D /* rTracker-resource.h */,
@@ -637,8 +639,6 @@
 				D482D275114FEB7500CE6BC8 /* trackerObj.m */,
 				D4A700CB13798874005E0E23 /* togd.h */,
 				D4A700CC13798874005E0E23 /* togd.m */,
-				D4620055182C046E00F6F2C2 /* notifyReminder.h */,
-				D4620056182C046E00F6F2C2 /* notifyReminder.m */,
 			);
 			name = "trackerObj classes";
 			sourceTree = "<group>";
